<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="default_voice_title">Default voice</string>
  <string name="default_voice_dialog_title">Select a voice</string>
  <string name="detect_language_title">Language detection</string>
  <string name="detect_language_desc">Automatic language switching</string>
  <string name="speech_volume">Speech volume</string>
  <string name="speech_rate">Speech rate</string>
  <string name="pseudo_english_title">English words</string>
  <string name="pseudo_english_desc">Try to read English words correctly</string>
  <string name="settings">Settings</string>
  <string name="wifi_only_title">Wi-Fi only</string>
  <string name="wifi_only_desc">Download voices only on Wi-Fi</string>
  <string name="speech_quality">Speech quality</string>
  <string-array name="quality_labels">
    <item>Best possible performance</item>
    <item>Standard quality</item>
    <item>Best possible quality</item>
  </string-array>
  <string name="languages">Languages</string>
  <string name="voice_remove_question">Are you sure you want to uninstall this voice?</string>
  <string name="install">Install</string>
  <string name="uninstall">Uninstall</string>
  <string name="play">Play</string>
  <string name="stop">Stop</string>
  <string name="increase">Increase</string>
  <string name="decrease">Decrease</string>
  <string name="reset">Reset</string>
  <string name="version">Version</string>
  <string name="user_dicts">User dictionaries</string>
  <string name="add">Add</string>
  <string name="remove">Remove</string>
  <string name="config_file">Configuration file</string>
</resources>
