<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
android:key="root">
    <CheckBoxPreference
        android:title="@string/wifi_only_title"
        android:summary="@string/wifi_only_desc"
        android:key="wifi_only"
        android:defaultValue="false"
        android:order="10"/>
    <ListPreference
        android:key="quality"
        android:entries="@array/quality_labels"
        android:entryValues="@array/quality_values"
        android:defaultValue="std"
        android:title="@string/speech_quality"
        android:dialogTitle="@string/speech_quality"
        android:summary="%s"
        android:order="20"/>
    <SwitchPreferenceCompat
        android:title="@string/config_file"
        android:key="config_file"
        android:persistent="false"
        android:defaultValue="false"
        android:order="199"
        app:isPreferenceVisible="false"/>
    <Preference
        android:key="version"
        android:persistent="false"
        android:title="@string/version"
        android:order="200"/>
</PreferenceScreen>
