<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_view"
    android:paddingLeft="?attr/dialogPreferredPadding"
    android:paddingRight="?attr/dialogPreferredPadding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <SeekBar
      android:id="@+id/slider"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>
  <Button
      android:id="@+id/dec_btn"
      android:text="−"
      android:contentDescription="@string/decrease"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/slider"
      app:layout_constraintStart_toStartOf="parent"/>
  <Button
      android:id="@+id/inc_btn"
      android:text="+"
      android:contentDescription="@string/increase"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/slider"
      app:layout_constraintEnd_toEndOf="parent"/>
  <Button
      android:id="@+id/def_btn"
      android:text="@string/reset"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@id/inc_btn"
      app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
